@@ -222,7 +222,7 @@ class ApiControllerOnlyApiTest extends AbstractControllerTest {
       .build();
     doReturn(Optional.of(loadedApiKey)).when(clientApiKeyService).findByClientId("30313233-3435-3637-3839-313233343536");
     doNothing().when(apiKeyValidator).validateApiKey(eq(loadedApiKey), any(ApiKey.class));
-    doReturn(Arrays.asList(
+    doReturn(List.of(
       ImmutableTenantGrantedAuthority.of("00000000-0000-0000-0000-000000000000", "00000000-0000-0000-0000-000000000000")))
       .when(apiKeyAuthoritiesProvider).loadAuthorities(loadedApiKey);
     doReturn(true).when(tenantAccessEvaluator).doesUserHaveAccessToTenant(Tenant.of("00000000-0000-0000-0000-000000000000", "00000000-0000-0000-0000-000000000000"));
